Fix hero image and text responsivenss

--- a/styles.css
+++ b/styles.css
@@ -861,7 +861,7 @@ nav li a:hover {
 
 .hero-text {
   position: absolute;
-  top: -20%; /* Adjust this value to move the text up or down */
+  top: -15%; /* Adjust this value to move the text up or down */
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
@@ -917,8 +917,11 @@ nav li a:hover {
 
 /* Media Queries for fine-tuning */
 @media (max-width: 1200px) {
+  .hero {
+    margin-top: 250px;
+  }
   .hero-text {
-    top: -22%; /* Slight adjustment for medium screens */
+    top: -15%; /* Slight adjustment for medium screens */
   }
 
   .hero .hero-heading {
@@ -930,7 +933,19 @@ nav li a:hover {
   }
 }
 
+@media (max-width: 992px) {
+  .hero {
+    margin-top: 220px;
+  }
+  .hero-text {
+    top: -18%; /* Slight adjustment for medium screens */
+  }
+}
+
 @media (max-width: 768px) {
+  .hero {
+    margin-top: 220px; /* Further reduced for smaller screens */
+  }
   .hero-text {
     top: -35%; /* Adjustment for smaller screens */
   }
@@ -945,6 +960,9 @@ nav li a:hover {
 }
 
 @media (max-width: 480px) {
+  .hero {
+    margin-top: 180px; /* Further reduced for smaller screens */
+  }
   .hero-text {
     top: -42%; /* Further adjustment for mobile screens */
   }
@@ -1190,7 +1208,8 @@ nav li a:hover {
 }
 
 .wave-line {
-  width: 800px;
+  width: 80%;
+  max-width: 800px;
   height: 40px;
   overflow: hidden;
 }
@@ -1214,12 +1233,6 @@ nav li a:hover {
   }
   to {
     transform: translateX(-50px);
-  }
-}
-
-@media (max-width: 820px) {
-  .wave-container {
-    width: 85%;
   }
 }
 
