--- a/styles.css
+++ b/styles.css
@@ -44,24 +44,16 @@ body {
 }
 
 /* Navbar */
-#navbar {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  padding: 1rem 0rem 0.5rem;
-  border-bottom: 1px solid #c5c5c5;
-}
-
-nav {
+nav#navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
-  flex-direction: row;
+  padding: 1rem 0rem 1rem;
+  border-bottom: 1px solid #c5c5c5;
   font-family: "Fraunces", sans-serif;
-
   width: 80%;
-  max-width: 1600px;
+  max-width: 1400px;
+  margin: auto;
 }
 
 .nav-logo {
@@ -70,16 +62,18 @@ nav {
   border-radius: 50%;
   transition: all 0.4s ease-in-out;
 }
+
 .nav-logo img {
   height: 40px;
   width: 40px;
+  display: block;
 }
 
 .nav-logo:hover {
   transform: scale(1.05);
 }
 
-nav ul {
+.nav-links {
   display: flex;
   flex-direction: row;
   list-style: none;
@@ -87,6 +81,8 @@ nav ul {
   font-weight: 500;
   margin: 0;
   padding: 0;
+  flex-grow: 1; /* allow links to take available space */
+  justify-content: center; /* center the links */
 }
 
 nav li a {
@@ -171,7 +167,6 @@ nav li a:hover {
     max-width: 1000px;
     padding-bottom: 25px;
     border-bottom: 1px solid #c5c5c5;
-    position: relative;
   }
 
   .mobile-navbar-content {
@@ -180,20 +175,31 @@ nav li a:hover {
     align-items: center;
     width: 100%;
     max-width: 1000px;
+    position: relative;
   }
 
   .nav-logo {
     position: absolute;
-    text-align: center;
     left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .nav-logo:hover {
+    transform: translate(-50%, -50%) scale(1.05);
   }
 
   .nav-logo img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
+    display: block; /* ensure proper centering */
   }
+
   .mobile-menu-btn img {
     padding-top: 10px;
+    padding-left: 0px;
   }
 
   .menu-icon {
@@ -204,9 +210,9 @@ nav li a:hover {
 
 @media (max-width: 768px) {
   .nav-links {
-    flex-direction: column;
+    /* flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 20px; */
   }
 
   .nav-buttons {
